KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/Salary_Record__c.object-meta.xml
<CustomObject>
    <label>Salary Records</label>
    <nameField>
        <displayFormat>dsal/{mm}/{yy}-{00}</displayFormat>
        <label>Salary Record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Record</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>