KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Annual_gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_gross_Salary__c</fullName>
    <formula>Monthly_Gross_Salary__c *12+ Performance_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>