KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Annual_Net_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Salary__c</fullName>
    <formula>Monthly_Net_Pay__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Net Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>