KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/BASIC_SALARY__c.field-meta.xml
<CustomField>
    <fullName>BASIC_SALARY__c</fullName>
    <label>BASIC SALARY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>