KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Employe_ID__c.field-meta.xml
<CustomField>
    <fullName>Employe_ID__c</fullName>
    <formula>EMPLOYEE_NAME__r.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employe ID</label>
    <type>Text</type>
</CustomField>