KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Employee_Designation__c.field-meta.xml
<CustomField>
    <fullName>Employee_Designation__c</fullName>
    <formula>TEXT(EMPLOYEE_NAME__r.DESIGNATION__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Designation</label>
    <type>Text</type>
</CustomField>