KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Employee_full_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_full_Name__c</fullName>
    <formula>EMPLOYEE_NAME__r.Employee_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee full Name</label>
    <type>Text</type>
</CustomField>