KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/EMPLOYEE_NAME__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEE_NAME__c</fullName>
    <label>Employee First Name</label>
    <referenceTo>Employee_Details__c</referenceTo>
    <relationshipLabel>Salary Record</relationshipLabel>
    <relationshipName>Salary_Record</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>