KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <formula>EMPLOYEE_NAME__r.Employee_Active_status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status</label>
    <type>Checkbox</type>
</CustomField>