KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Employer_contribution__c.field-meta.xml
<CustomField>
    <fullName>Employer_contribution__c</fullName>
    <formula>IF( BASIC_SALARY__c &gt;15000, (15000*0.12), (BASIC_SALARY__c*0.12) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>