KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Monthly_Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gross_Salary__c</fullName>
    <formula>( BASIC_SALARY__c + HRA__c+ Employee_PF_contribution__c + Employer_contribution__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Gross Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>