KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Monthly_Net_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Net_Pay__c</fullName>
    <formula>( BASIC_SALARY__c + HRA__c + Special_Allowance__c )-( Employer_contribution__c +  Employee_PF_contribution__c+ Other_deductions__c + Insurance_deductions__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Net Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>