KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Other_deductions__c.field-meta.xml
<CustomField>
    <fullName>Other_deductions__c</fullName>
    <label>Other deductions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>