KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Performance_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Performance_Bonus__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Performance Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>