KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Performance_Bonus_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Performance_Bonus_Cycle__c</fullName>
    <label>Performance Bonus Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Halfyearly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>