KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/fields/Special_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Special_Allowance__c</fullName>
    <formula>( BASIC_SALARY__c *10)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>