KsheerabdhiOrgSetup/force-app/main/default/objects/Salary_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_full_Name__c</columns>
    <columns>Employe_ID__c</columns>
    <columns>Employee_Designation__c</columns>
    <columns>Department__c</columns>
    <columns>Employee_Status__c</columns>
    <columns>BASIC_SALARY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>